# vr-show

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TESTING.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml  sync-package-managers.yml
crates/pano-viewer/: Cargo.toml
crates/pano-viewer/icons/: icon.icns
crates/pano-viewer/shaders/: pano.frag.wgsl
crates/pano-viewer/src/: app.rs  error.rs  file.rs  input.rs  main.rs  renderer.rs  window.rs
crates/pano-viewer/src/scene/: camera.rs  mod.rs  sphere.rs  texture.rs
crates/vr-show/: Cargo.toml
crates/vr-show/shaders/: pano.vert.wgsl
crates/vr-show/src/: app.rs  input.rs  main.rs  renderer.rs  ui.rs  window.rs
crates/vr-show/src/scene/: texture.rs
docs/superpowers/plans/: 2026-06-25-360-pano-viewer.md  2026-06-29-pure-rust-port.md
docs/superpowers/specs/: 2026-06-25-360-pano-viewer-design.md  2026-06-29-handoff.md  2026-06-29-pure-rust-port-design.md
scripts/: copy-bundles.sh
src/: emptyState.js  fileLoader.js  main.js  style.css  viewer.js
tests/: fileLoader.test.js  viewer.test.js  wireApp.test.js
