[workspace]
resolver = "2"
members = ["crates/vr-show"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["asyncb"]

[workspace.dependencies]
winit = { version = "0.30", default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
wgpu = { version = "27", default-features = false, features = ["wgsl", "vulkan", "metal", "gles", "dx12"] }
egui = "0.33"
egui-wgpu = { version = "0.33", features = ["winit"] }
egui-winit = "0.33"
glam = "0.29"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
