[package]
name = "vr-show"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "360° panoramic image viewer"

[[bin]]
name = "vr-show"
path = "src/main.rs"

[dependencies]
winit = { workspace = true }
wgpu = { workspace = true, features = ["wgsl"] }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }

[package.metadata.deb]
name = "vr-show"
maintainer = "asyncb"
copyright = "MIT"
depends = "libc6, libgcc-s1"
extended-description = "A 360 degree panoramic image viewer written in pure Rust.\n Supports PNG and JPEG equirectangular images."
priority = "optional"
section = "graphics"
